  * Added option --ignore-absent to plugin "zap".

[BUG] Bug fixes:

  * In input plugin "hls", when the sub-playlists or media segments had
    relative URI's with absolute file path, the sub-playlists or segments
    were not correctly loaded.
  * On Unix systems (Linux, macOS), the option --append was not correctly
    handled in plugin "file". The file was rewritten from the beginning.

-------------------------------------------------------------------------------

VERSION 3.19-1516

[NEW] New commands and plugins:

  * Added plugin "timeshift" (delay packet transmission).

[IMP] Improvements on existing commands and plugins:

  * Added option --receive-timeout to "tsp".
  * Added options --aes-cbc, --aes-ctr, --iv, --ctr-counter-bits,
    --output-cw-file to plugins "scrambler" and "descrambler".
  * Added option --swap-cw to plugin "descrambler".
  * Added default CAS selection options --default-cas-id, --conax, --irdeto,
    --mediaguard, --nagravision, --nds, --safeaccess, --viaccess, --widevine
    to "tspsi", "tstabdump", "tstables" and plugins "psi", "tables".
  * Added option --extensions to "tsversion" and "tstabcomp".
  * Complete ATSC signalization, as defined in A/65, is now supported.
  * NorDig-private descriptors are supported.
  * Added option --power-mode to "tsdektec" and output plugin "dektec".
  * Added options --build-service-list-descriptors and --default-service-type
    to plugin "nit".
  * Added options --start and --stop to plugin "trigger".
  * Added option --local-port to plugins "ip" (output) and "mpe".
  * Service id or name is now optional in plugin "svrename". When omitted, the
    default service is the first one in the PAT.
  * On Linux, multi-standard tuners are now supported (for instance tuners
    which support DVB-T and DVB-C). The options --delivery-system is used
    to select the appropriate type. Multi-standard tuners are not supported
    on Windows.

[BUG] Bug fixes:
